# botobot

./: .gitignore  Cargo.toml  README.md
crates/agent-act/: Cargo.toml
crates/agent-act/src/: ann.rs  artifact.rs  background.rs  book.rs  compact.rs  context.rs  dap.rs  dap_session.rs  dap_wire.rs  edit.rs  embed.rs  env.rs  episode.rs  lib.rs  lsp.rs  market.rs  memory.rs  officecli.rs  output.rs  patch.rs  pdf.rs  recall.rs  registry.rs  rename.rs  resource.rs  search.rs  shell.rs  skill.rs  todo.rs  tools.rs  typed.rs
crates/agent-act/src/browser/: cdp.rs  connect.rs  interaction.rs  launch.rs  mod.rs  page.rs  screencast.rs  snapshot.rs  tools.rs
crates/agent-infer/: Cargo.toml
crates/agent-infer/src/: accumulator.rs  lib.rs  reasoning.rs  retry.rs  sse.rs
crates/agent-loop/: Cargo.toml
crates/agent-loop/src/: agent.rs  agent_tool.rs  exec_policy.rs  lib.rs  session.rs
crates/agent-observe/: Cargo.toml
crates/agent-observe/src/: artifact.rs  lib.rs  summarizing.rs
crates/base-types/: Cargo.toml
crates/base-types/src/: lib.rs
crates/bot-api/: Cargo.toml
crates/bot-api/src/: cron.rs  cron_tools.rs  heartbeat.rs  hub.rs  lib.rs  logs.rs  protocol.rs  session_driver.rs  session_store.rs  team_runner.rs  team_tools.rs
crates/bot-api/src/transport/: http.rs  ws.rs
crates/bot-mcp/: Cargo.toml
crates/bot-mcp/src/: lib.rs
crates/bot-sdk/: Cargo.toml
crates/bot-sdk/src/: lib.rs
crates/model-embed/: .gitignore  Cargo.toml  build.rs
crates/model-embed/src/: lib.rs
crates/team-core/: Cargo.toml
crates/team-core/src/: bot.rs  conduct.rs  lib.rs  message.rs  orchestrator.rs  project.rs  store.rs  task.rs  team.rs
crates/webui-bin/: Cargo.toml
crates/webui-bin/src/: bot.rs  browser_mirror.rs  config.rs  gc.rs  lib.rs  main.rs  open.rs  profile.rs  server.rs  server_chat.rs  server_market.rs  webui.rs
crates/webui-bin/tests/: memory_eval.rs
crates/webui-bin/webui/: app.js  index.html  style.css
docs/: now.md  todo.md
