[package]
name = "agent-infer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
name = "agent_infer"
path = "src/lib.rs"

[dependencies]
base-types.workspace = true
async-trait.workspace = true
async-stream.workspace = true
futures.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true }
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true }
