[package]
name = "agent-loop"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
name = "agent_loop"
path = "src/lib.rs"

[dependencies]
base-types.workspace = true
agent-act.workspace = true
agent-observe.workspace = true
async-trait.workspace = true
futures.workspace = true
tokio = { workspace = true }
tokio-util.workspace = true
tokio-stream.workspace = true
uuid.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
