[package]
name = "agent-observe"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
name = "agent_observe"
path = "src/lib.rs"

[dependencies]
base-types.workspace = true
agent-act.workspace = true
async-trait.workspace = true
futures.workspace = true

[dev-dependencies]
tokio = { workspace = true }
tokio-util.workspace = true
serde_json.workspace = true
