[package]
name = "bot-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
name = "bot_api"
path = "src/lib.rs"

[dependencies]
agent-loop.workspace = true
base-types.workspace = true
team-core.workspace = true
axum.workspace = true
tokio = { workspace = true }
futures.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
dashmap.workspace = true
uuid.workspace = true
async-trait.workspace = true
anyhow.workspace = true

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
