[package]
name = "bot-mcp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
name = "bot_mcp"
path = "src/lib.rs"

[dependencies]
base-types.workspace = true
bot-sdk.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true }
uuid.workspace = true

[dev-dependencies]
agent-loop.workspace = true
async-trait.workspace = true
futures.workspace = true
