[package]
name = "model-embed"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
name = "model_embed"
path = "src/lib.rs"

[dependencies]
# candle 本地推理（CPU）。纯 Rust，无 C 依赖。
candle-core = "0.9"
candle-nn = "0.9"
candle-transformers = "0.9"
# 纯 Rust 正则后端 fancy-regex（非 oniguruma C 库），守无-C 依赖铁律。
tokenizers = { version = "0.21", default-features = false, features = ["fancy-regex"] }
serde_json.workspace = true
base-types.workspace = true

[build-dependencies]
ureq = "2"
safetensors = "0.4"
half = "2"
