[package]
name = "team-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
name = "team_core"
path = "src/lib.rs"

[dependencies]
serde = { workspace = true }
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true
async-trait.workspace = true
futures.workspace = true

[dev-dependencies]
tokio = { workspace = true }
